refactor producer structure
