# backend/docs/swagger.yaml
@@ -29,32 +29,18 @@ definitions:
         type: string
       open:
         type: string
-      volue:
+      volume:
         type: string
     type: object
   api.Producer:
     properties:
-      description:
-        type: string
       iconId:
         type: string
       id:
         type: string
-      isin:
-        type: string
-      lastPrice:
-        type: number
       name:
         type: string
-      priceData:
-        items:
-          $ref: '#/definitions/api.PriceData'
-        type: array
-      symbol:
-        type: string
-      tendency:
-        type: string
-      wkn:
+      stockId:
         type: string
     type: object
   api.Receipt:
@@ -80,12 +66,13 @@ definitions:
     properties:
       amount:
         type: number
+      priceTendency:
+        type: string
       producerId:
         type: string
       quantity:
         type: integer
       title:
-        description: Id       primitive.ObjectID `bson:"_id" json:"id,omitempty"`
         type: string
       vatRate:
         type: number
@@ -116,6 +103,31 @@ definitions:
       name:
         type: string
       street:
+        type: string
+    type: object
+  api.Stock:
+    properties:
+      description:
+        type: string
+      id:
+        type: string
+      isin:
+        type: string
+      lastPrice:
+        type: number
+      name:
+        type: string
+      priceData:
+        items:
+          $ref: '#/definitions/api.PriceData'
+        type: array
+      symbol:
+        type: string
+      tendencyWeek:
+        type: string
+      tendencyYear:
+        type: string
+      wkn:
         type: string
     type: object
   api.Transaction:
@@ -406,6 +418,72 @@ paths:
       summary: Create retailer
       tags:
       - Retailer
+  /stocks:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            items:
+              $ref: '#/definitions/api.Stock'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get all stock datas
+      tags:
+      - Stock
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Add Stock
+        in: body
+        name: Stock
+        required: true
+        schema:
+          $ref: '#/definitions/api.Stock'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            $ref: '#/definitions/api.Stock'
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Create price data
+      tags:
+      - Stock
+  /stocks/{id}:
+    get:
+      parameters:
+      - description: Stock Id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            $ref: '#/definitions/api.Stock'
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get single price data by its id
+      tags:
+      - Stock
   /transactions:
     get:
       consumes:
